--- a/frontweb/public/index.html
+++ b/frontweb/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>DS CATALOG - GILBERTO</title>
     <meta name="theme-color" content="#000000" />
     <meta
       name="dscatalog - devsuperior"
       content="Projeto desenvolvido com react bootcamp e spring "
-
-    <title>TITLE: DSCATALOG WITH REACT </title>
+    />
   </head>
   <body>
     <noscript>Precisa habilitar o JavaScript no seu navegador </noscript>
